# drone-delivery-env

./: .gitignore  Dockerfile  README.md  inference.py  inference_results.json  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  drone_environment.py  web_ui.html
