[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drone_delivery_env"
version = "2.0.0"
description = "Drone delivery path optimization environment for OpenEnv"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "models*"]
