[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drone_delivery_env"
version = "0.1.0"
description = "Drone delivery environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
# Mandatory dependencies for the validator
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0" 
]

# This is the "Entry Point" the validator is looking for
[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "models*"]